--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
-7. Find p2c formula.
 8. Redo Gyroradius formula with expected value for thermal speed. Should be small correction.
-9. Verify whether I need a correction factor or not.
+9. Run Neon +1, +2, +3 rustbca simulations.
+10. run DFT simulations for more accurate lithium divertor representation
